fixed spacing issue in header logo - search bar

--- a/assets/css/results.css
+++ b/assets/css/results.css
@@ -16,15 +16,19 @@
     color: white;
     text-align: center;
     font-family: 'Playfair Display', serif;
+    margin: 0;
 }
 
-h1,p{
-    font-family: 'Playfair Display', serif;
+#headerRow {
+    margin-bottom: 0;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
+
 .inputrow{
     border:1px,white,solid;
     border-radius: 15px;
-    /* padding: 9px 10px; */
+    margin: 0;
 }
 
 ::placeholder{
