--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,21 +3,6 @@
 }
 
 
-#background {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    z-index: -100;
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    transform: translateX(-50%) translateY(-50%);
-    background: url(style.css) no-repeat;
-    background-size: cover;
-}
-
 #jumbotron {
     background: linear-gradient(45deg, rgb(244,67,54, 1), rgb(244,67,54, 0.8));
     margin-bottom: 20px;
